Make sure proposer name doesn't overlap avatar on proposal history rows (#1565)
* Make sure proposer name doesn't overlap avatar on proposal history rows

Fixes: https://github.com/daostack/alchemy/issues/1551

* Lint fixes

--- a/src/components/Proposal/ProposalHistoryRow.scss
+++ b/src/components/Proposal/ProposalHistoryRow.scss
@@ -12,6 +12,7 @@
 
 .proposalCreator {
   width: auto;
+  min-width: 105px;
   padding-left: 7px;
   cursor: default;
 }
